fix spacing in waybar

--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -2,7 +2,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "Geist Mono", monospace;
+  font-family: "Geist Mono Nerd Font Propo", monospace;
   font-weight: 600;
   font-size: 15px;
   min-height: 0;
